--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
                     <span>In Progress - Desarrollo Custom</span>
                 </div>
             </div>
-            
+        </div>
+        <div class="card">
+            <img data-id="ecoalpha" src="img/ecoalpha.jpg" alt="">
+            <div class="card-details">
+                <div class="card-info">
+                    <h3 data-id="ecoalpha">Eco Alpha</h3>
+                    <span>In Progress - Desarrollo Custom</span>
+                </div>
+            </div>
         </div>
     </div>
     <div id="modal" >
